--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,127 +10,178 @@
 
     <EditText
         android:id="@+id/edt_main_input"
-        android:layout_width="wrap_content"
-        android:layout_height="46dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="2dp"
         android:background="@android:color/background_light"
         android:ems="10"
         android:hint="输入内容"
         android:inputType="textPersonName"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="120dp"
-        tools:layout_editor_absoluteY="88dp" />
+        app:layout_constraintBottom_toTopOf="@+id/btn_main_shizheng"
+        app:layout_constraintEnd_toEndOf="@+id/btn_main_shizheng"
+        app:layout_constraintStart_toEndOf="@+id/btn_main_up"
+        app:layout_constraintTop_toTopOf="@+id/btn_main_search" />
 
     <Button
         android:id="@+id/btn_main_off"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="28dp"
+        android:layout_marginRight="28dp"
+        android:layout_marginBottom="3dp"
         android:text="关闭"
         android:textColor="@android:color/holo_red_dark"
-        tools:layout_editor_absoluteX="292dp"
-        tools:layout_editor_absoluteY="0dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/btn_main_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="55dp"
+        android:layout_marginLeft="55dp"
+        android:layout_marginBottom="3dp"
         android:text="上一页"
-        tools:layout_editor_absoluteX="4dp"
-        tools:layout_editor_absoluteY="512dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_main_cheif"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="55dp"
+        android:layout_marginLeft="55dp"
+        android:layout_marginBottom="3dp"
         android:text="主页"
         android:textColor="@android:color/holo_red_dark"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="510dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btn_main_up" />
 
     <Button
         android:id="@+id/btn_main_next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="143dp"
+        android:layout_marginLeft="143dp"
+        android:layout_marginEnd="143dp"
+        android:layout_marginRight="143dp"
+        android:layout_marginBottom="3dp"
         android:text="下一页"
-        tools:layout_editor_absoluteX="292dp"
-        tools:layout_editor_absoluteY="512dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/btn_main_off"
+        app:layout_constraintStart_toStartOf="@+id/btn_main_cheif" />
 
     <Button
         android:id="@+id/btn_main_search"
         android:layout_width="wrap_content"
         android:layout_height="52dp"
+        android:layout_marginTop="195dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:background="@android:color/transparent"
         android:text="青山搜索"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="88dp" />
+        app:layout_constraintEnd_toStartOf="@+id/edt_main_input"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_main_baidu "
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:text="百度"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="4dp"
-        tools:layout_editor_absoluteY="197dp" />
+        app:layout_constraintStart_toStartOf="@+id/btn_mian_renmin"
+        app:layout_constraintTop_toBottomOf="@+id/btn_mian_renmin" />
 
     <Button
         android:id="@+id/btn_main_souhu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="33dp"
+        android:layout_marginLeft="33dp"
+        android:layout_marginTop="12dp"
         android:text="搜狐"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="104dp"
-        tools:layout_editor_absoluteY="197dp" />
+        app:layout_constraintStart_toEndOf="@+id/btn_main_baidu "
+        app:layout_constraintTop_toBottomOf="@+id/btn_main_zhongyang" />
 
     <Button
         android:id="@+id/btn_main_taobao "
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
         android:text="淘宝"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="202dp"
-        tools:layout_editor_absoluteY="197dp" />
+        app:layout_constraintEnd_toStartOf="@+id/btn_main_shizheng"
+        app:layout_constraintTop_toBottomOf="@+id/btn_main_zhongyang" />
 
     <Button
         android:id="@+id/btn_main_tianmao"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:text="天猫"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="292dp"
-        tools:layout_editor_absoluteY="197dp" />
+        app:layout_constraintEnd_toEndOf="@+id/btn_main_shizheng"
+        app:layout_constraintTop_toBottomOf="@+id/btn_main_shizheng" />
 
     <Button
-        android:id="@+id/btn_mian_"
+        android:id="@+id/btn_mian_renmin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="4dp"
-        tools:layout_editor_absoluteY="140dp" />
+        android:text="人民网"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="@+id/btn_main_search"
+        app:layout_constraintTop_toBottomOf="@+id/btn_main_search" />
 
     <Button
-        android:id="@+id/button17"
+        android:id="@+id/btn_main_zhongyang"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="92dp"
-        tools:layout_editor_absoluteY="140dp" />
+        android:layout_marginStart="48dp"
+        android:layout_marginLeft="48dp"
+        android:layout_marginTop="2dp"
+        android:text="中央新闻网"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="@+id/btn_main_souhu"
+        app:layout_constraintTop_toBottomOf="@+id/edt_main_input" />
 
     <Button
-        android:id="@+id/button18"
+        android:id="@+id/btn_main_shizheng"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="192dp"
-        tools:layout_editor_absoluteY="140dp" />
+        android:layout_marginTop="61dp"
+        android:layout_marginEnd="75dp"
+        android:layout_marginRight="75dp"
+        android:text="时政要闻"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_main_logo" />
 
-    <Button
-        android:id="@+id/button19"
+    <android.support.constraint.Barrier
+        android:id="@+id/barrier"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="278dp"
-        tools:layout_editor_absoluteY="140dp" />
+        app:barrierDirection="top"
+        tools:layout_editor_absoluteY="887dp" />
+
+    <ImageView
+        android:id="@+id/iv_main_logo"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="37dp"
+        android:layout_marginLeft="37dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="9dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_main_search"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo" />
 
 </android.support.constraint.ConstraintLayout>
