--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/webwxgetmsgimg"
     tools:context=".MainActivity"
     tools:layout_editor_absoluteY="25dp">
 
@@ -12,8 +12,8 @@
         android:id="@+id/edt_main_input"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="4dp"
         android:layout_marginBottom="2dp"
+        android:layout_marginTop="4dp"
         android:background="@android:color/background_light"
         android:ems="10"
         android:hint="输入内容"
@@ -28,9 +28,9 @@
         android:id="@+id/btn_main_off"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="3dp"
         android:layout_marginEnd="28dp"
         android:layout_marginRight="28dp"
-        android:layout_marginBottom="3dp"
         android:text="关闭"
         android:textColor="@android:color/holo_red_dark"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -40,9 +40,9 @@
         android:id="@+id/btn_main_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="55dp"
-        android:layout_marginLeft="55dp"
         android:layout_marginBottom="3dp"
+        android:layout_marginLeft="55dp"
+        android:layout_marginStart="55dp"
         android:text="上一页"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -51,9 +51,9 @@
         android:id="@+id/btn_main_cheif"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="55dp"
-        android:layout_marginLeft="55dp"
         android:layout_marginBottom="3dp"
+        android:layout_marginLeft="55dp"
+        android:layout_marginStart="55dp"
         android:text="主页"
         android:textColor="@android:color/holo_red_dark"
         android:textSize="18sp"
@@ -64,11 +64,11 @@
         android:id="@+id/btn_main_next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="143dp"
-        android:layout_marginLeft="143dp"
-        android:layout_marginEnd="143dp"
-        android:layout_marginRight="143dp"
         android:layout_marginBottom="3dp"
+        android:layout_marginEnd="143dp"
+        android:layout_marginLeft="143dp"
+        android:layout_marginRight="143dp"
+        android:layout_marginStart="143dp"
         android:text="下一页"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btn_main_off"
@@ -78,11 +78,12 @@
         android:id="@+id/btn_main_search"
         android:layout_width="wrap_content"
         android:layout_height="52dp"
-        android:layout_marginTop="195dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:background="@android:color/transparent"
+        android:layout_marginTop="195dp"
+        android:background="#75000000"
         android:text="青山搜索"
+        android:textColor="@android:color/holo_blue_dark"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/edt_main_input"
         app:layout_constraintTop_toTopOf="parent" />
@@ -101,8 +102,8 @@
         android:id="@+id/btn_main_souhu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="33dp"
         android:layout_marginLeft="33dp"
+        android:layout_marginStart="33dp"
         android:layout_marginTop="12dp"
         android:text="搜狐"
         android:textSize="18sp"
@@ -113,9 +114,9 @@
         android:id="@+id/btn_main_taobao "
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
         android:layout_marginEnd="30dp"
         android:layout_marginRight="30dp"
+        android:layout_marginTop="12dp"
         android:text="淘宝"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/btn_main_shizheng"
@@ -144,8 +145,8 @@
         android:id="@+id/btn_main_zhongyang"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
         android:layout_marginLeft="48dp"
+        android:layout_marginStart="48dp"
         android:layout_marginTop="2dp"
         android:text="中央新闻网"
         android:textSize="18sp"
@@ -156,13 +157,13 @@
         android:id="@+id/btn_main_shizheng"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="61dp"
         android:layout_marginEnd="75dp"
         android:layout_marginRight="75dp"
         android:text="时政要闻"
         android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_mian_renmin"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_main_logo" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_main_search" />
 
     <android.support.constraint.Barrier
         android:id="@+id/barrier"
@@ -170,18 +171,5 @@
         android:layout_height="wrap_content"
         app:barrierDirection="top"
         tools:layout_editor_absoluteY="887dp" />
-
-    <ImageView
-        android:id="@+id/iv_main_logo"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginStart="37dp"
-        android:layout_marginLeft="37dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginBottom="9dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_main_search"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo" />
 
 </android.support.constraint.ConstraintLayout>
