--- a/app/src/main/res/layout/activity_cheif.xml
+++ b/app/src/main/res/layout/activity_cheif.xml
@@ -11,92 +11,151 @@
         android:id="@+id/tv_main_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="57dp"
+        android:layout_marginTop="33dp"
         android:background="@android:color/darker_gray"
         android:text="青山浏览器"
         android:textColor="@android:color/holo_purple"
         android:textSize="30sp"
-        tools:layout_editor_absoluteX="225dp"
-        tools:layout_editor_absoluteY="33dp" />
+        app:layout_constraintBottom_toTopOf="@+id/btn_cheif_uc"
+        app:layout_constraintEnd_toStartOf="@+id/btn_cheif_sougou"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_main_return"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="7dp"
         android:text="返回主页"
         android:textColor="@android:color/holo_red_dark"
         android:textSize="24sp"
-        tools:layout_editor_absoluteX="240dp"
-        tools:layout_editor_absoluteY="828dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_cheif_aiqiyi" />
 
     <Button
         android:id="@+id/btn_cheif_baidu  "
-        android:layout_width="101dp"
-        android:layout_height="98dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="51dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginLeft="73dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginStart="73dp"
+        android:layout_marginTop="131dp"
         android:background="@drawable/baidu"
-        tools:layout_editor_absoluteX="73dp"
-        tools:layout_editor_absoluteY="131dp" />
+        app:layout_constraintBottom_toTopOf="@+id/btn_cheif_baiduyun"
+        app:layout_constraintEnd_toStartOf="@+id/btn_cheif_uc"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_cheif_uc"
-        android:layout_width="118dp"
-        android:layout_height="98dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="51dp"
+        android:layout_marginEnd="51dp"
+        android:layout_marginRight="51dp"
         android:background="@drawable/uc"
-        tools:layout_editor_absoluteX="206dp"
-        tools:layout_editor_absoluteY="131dp" />
+        app:layout_constraintBottom_toTopOf="@+id/btn_cheif_qq"
+        app:layout_constraintEnd_toStartOf="@+id/btn_cheif_sougou"
+        app:layout_constraintStart_toEndOf="@+id/btn_cheif_baidu  "
+        app:layout_constraintTop_toBottomOf="@+id/tv_main_title" />
 
     <Button
         android:id="@+id/btn_cheif_sougou"
-        android:layout_width="134dp"
-        android:layout_height="96dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="53dp"
+        android:layout_marginEnd="91dp"
+        android:layout_marginRight="91dp"
+        android:layout_marginTop="131dp"
         android:background="@drawable/sougou"
-        tools:layout_editor_absoluteX="375dp"
-        tools:layout_editor_absoluteY="131dp" />
+        app:layout_constraintBottom_toTopOf="@+id/btn_cheif_qqyouxiang"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btn_cheif_uc"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_cheif_baiduyun"
-        android:layout_width="104dp"
-        android:layout_height="95dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="28dp"
+        android:layout_marginEnd="29dp"
+        android:layout_marginLeft="73dp"
+        android:layout_marginRight="29dp"
+        android:layout_marginStart="73dp"
         android:background="@drawable/baiduyun"
-        tools:layout_editor_absoluteX="73dp"
-        tools:layout_editor_absoluteY="280dp" />
+        app:layout_constraintBottom_toTopOf="@+id/btn_cheif_xinlang"
+        app:layout_constraintEnd_toStartOf="@+id/btn_cheif_qq"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_cheif_baidu  " />
 
     <Button
         android:id="@+id/btn_cheif_qq"
-        android:layout_width="118dp"
-        android:layout_height="92dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="31dp"
+        android:layout_marginEnd="51dp"
+        android:layout_marginRight="51dp"
         android:background="@drawable/qq"
-        tools:layout_editor_absoluteX="206dp"
-        tools:layout_editor_absoluteY="280dp" />
+        app:layout_constraintBottom_toTopOf="@+id/btn_cheif_aiqiyi"
+        app:layout_constraintEnd_toStartOf="@+id/btn_cheif_qqyouxiang"
+        app:layout_constraintStart_toEndOf="@+id/btn_cheif_baiduyun"
+        app:layout_constraintTop_toBottomOf="@+id/btn_cheif_uc" />
 
     <Button
         android:id="@+id/btn_cheif_qqyouxiang"
-        android:layout_width="134dp"
-        android:layout_height="89dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="34dp"
+        android:layout_marginEnd="91dp"
+        android:layout_marginRight="91dp"
         android:background="@drawable/qqyouxiang"
-        tools:layout_editor_absoluteX="375dp"
-        tools:layout_editor_absoluteY="280dp" />
+        app:layout_constraintBottom_toTopOf="@+id/btn_cheif_youku"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btn_cheif_qq"
+        app:layout_constraintTop_toBottomOf="@+id/btn_cheif_sougou" />
 
     <Button
         android:id="@+id/btn_cheif_xinlang"
-        android:layout_width="103dp"
-        android:layout_height="83dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="401dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginLeft="73dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginStart="73dp"
         android:background="@drawable/xinlang"
-        tools:layout_editor_absoluteX="73dp"
-        tools:layout_editor_absoluteY="403dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btn_cheif_aiqiyi"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_cheif_baiduyun" />
 
     <Button
         android:id="@+id/btn_cheif_aiqiyi"
-        android:layout_width="118dp"
-        android:layout_height="83dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="342dp"
+        android:layout_marginEnd="51dp"
+        android:layout_marginRight="51dp"
         android:background="@drawable/aiqiyi"
-        tools:layout_editor_absoluteX="206dp"
-        tools:layout_editor_absoluteY="403dp" />
+        app:layout_constraintBottom_toTopOf="@+id/btn_main_return"
+        app:layout_constraintEnd_toStartOf="@+id/btn_cheif_youku"
+        app:layout_constraintStart_toEndOf="@+id/btn_cheif_xinlang"
+        app:layout_constraintTop_toBottomOf="@+id/btn_cheif_qq" />
 
     <Button
         android:id="@+id/btn_cheif_youku"
-        android:layout_width="137dp"
-        android:layout_height="80dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="404dp"
+        android:layout_marginEnd="88dp"
+        android:layout_marginRight="88dp"
         android:background="@drawable/youku"
-        tools:layout_editor_absoluteX="375dp"
-        tools:layout_editor_absoluteY="403dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btn_cheif_aiqiyi"
+        app:layout_constraintTop_toBottomOf="@+id/btn_cheif_qqyouxiang" />
 </android.support.constraint.ConstraintLayout>
